k8s/ingress-app/ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  controller: k8s.io/ingress-nginx
