k8s/ingress-app/external-name-grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-svc-bridge
  namespace: default
spec:
  type: ExternalName
  externalName: prometheus-app-grafana.monitoring.svc.cluster.local
