k8s/ingress-app/externalname-argocd.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-svc-bridge
  namespace: default
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  type: ExternalName
  externalName: argocd-server.argocd.svc.cluster.local
