k8s/ingress-app/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: subdomain-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  ingressClassName: nginx
  rules:
    # Statuspage Subdomain
    - host: status-page.cash-gun.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80

    # Kibana Subdomain
    - host: kibana.cash-gun.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana-svc-bridge
                port:
                  number: 5601

    # Grafana Subdomain
    - host: grafana.cash-gun.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-svc-bridge
                port:
                  number: 80

    # ArgoCD Subdomain
    - host: argocd.cash-gun.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-svc-bridge
                port:
                  number: 443

  tls:
    - hosts:
        - status-page.cash-gun.com
        - kibana.cash-gun.com
        - grafana.cash-gun.com
        - argocd.cash-gun.com
      secretName: tls-statuspage-cash-gun
